Add alternate method of calculating mj scores to notebook

--- a/Majority_vote_test_bed.ipynb
+++ b/Majority_vote_test_bed.ipynb
@@ -37,13 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from majority_judgement import rank_submissions, linearise_submissions, generate_scores"
+    "from majority_judgement import (rank_submissions, linearise_submissions, generate_scores,\n",
+    "                            get_floor_median, remove_scoring_element)\n",
+    "from copy import deepcopy"
    ]
   },
   {
@@ -70,6 +72,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def calc(score_set):\n",
+    "    _score_set = sorted(deepcopy(score_set))\n",
+    "    power = 3 ** (len(score_set) - 1)\n",
+    "    res = 0\n",
+    "    while _score_set:\n",
+    "        score = get_floor_median(_score_set)\n",
+    "        res += (score * power)\n",
+    "        power = int(power / 3)\n",
+    "        remove_scoring_element(score, _score_set)\n",
+    "    return res\n",
+    "\n",
+    "def alt_rank(scores):\n",
+    "    res = {}\n",
+    "    for s in scores:\n",
+    "        score = calc(s)\n",
+    "        res.setdefault(score, 0)\n",
+    "        res[score] += 1\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "scores = generate_scores(90, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 2.52 ms per loop\n",
+      "OrderedDict([(0, 2), (1, 8), (2, 1), (10, 4), (11, 5), (20, 1), (37, 15), (38, 5), (40, 9), (41, 19), (47, 4), (50, 10), (74, 1), (77, 6)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit linearise_submissions(rank_submissions(deepcopy(scores)))\n",
+    "tree = rank_submissions(deepcopy(scores))\n",
+    "lin_trees = linearise_submissions(tree)\n",
+    "print(lin_trees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 2.82 ms per loop\n",
+      "[(1, 1), (10, 1), (91, 1), (92, 4), (101, 3), (182, 1), (820, 1), (821, 1), (830, 2), (911, 5), (1640, 1), (3007, 2), (3008, 4), (3017, 9), (3098, 5), (3251, 2), (3260, 6), (3287, 1), (3341, 11), (3368, 7), (3371, 1), (3827, 4), (4070, 2), (4097, 5), (4100, 3), (6014, 1), (6257, 2), (6284, 3), (6287, 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit alt_rank(scores)\n",
+    "maths = alt_rank(scores)\n",
+    "print(sorted(maths.items(), key=lambda x:x))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -77,6 +163,7 @@
    "outputs": [],
    "source": [
     "scores = generate_scores(90, 8)\n",
+    "\n",
     "res = rank_submissions(scores, max_depth=5)\n",
     "lin_res = linearise_submissions(res)\n",
     "\n",
